# Audio2TextCENF

./: .editorconfig  .gitignore  ANALISIS_LICENCIAS.md  CAMBIO_LICENCIA_APACHE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  CREAR_RELEASE_GITHUB.md  GEMINI.md  INICIO_RAPIDO_MSI.md  INSTRUCCIONES_FINALES.md  LICENSE  MANIFEST.in  MEJORAS_PROFESIONALES.md  NOTICE  README.md  README_EN.md  RESPUESTAS_PREGUNTAS.md  SECURITY.md  VERIFICACION_INSTALACION.md  config.json.example  create_launch_json.py  debug_full.py  debug_trace.py  error.txt  error_log.txt  installer.wxs  main.py  pyproject.toml  requirements.txt  setup.py  test_ctk.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.lessons/: lesson_20251229_tclerror_customtkinter.md
backend/: config_manager.py  file_manager.py  localization_manager.py  sound_manager.py  transcriber.py  updater.py
config/: version.json  version_info.txt  version_info_CONTRERAS.txt  version_info_CUTIGNOLA.txt  version_info_GENERAL.txt
docs/: COMPLETADO_v0.9.2.md  GENERACION_COMPLETA.md  GUIA_API_KEY_GROQ.md  GUIA_INSTALADOR_MSI.md  GUIA_SMARTSCREEN.md  INSTALACION.md  INSTRUCCIONES_SIGUIENTES_PASOS.md  README_ESTRUCTURA_PROFESIONAL.md  README_v0.9.2.md  RESUMEN_FINAL_v0.9.2.md  RESUMEN_SOLUCIONES.md  installer.nsi
docs/planning/: CENF_ULPS_SPECIFICATION.md
docs/technical/: AGNO_CAPABILITIES_REFERENCE.md  CONFIG_SYSTEM_PROMPT.md
lang/: en.json  es.json
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md  techContext.md
scripts/: build.py  build_CONTRERAS.py  build_CONTRERAS_v2.py  build_CUTIGNOLA.py  build_CUTIGNOLA_v2.py  build_GENERAL.py  build_GENERAL_v2.py  build_all.py  build_all_v2.py  cleanup_build_artifacts.py  cleanup_specs.py  final_cleanup.py  organize_project.py  test_pro_bridge.py  test_pro_logic_isolated.py  update_build_paths.py
templates/: info_template.html
ui/: app.py  recording_overlay.py  tutorial.py  update_tab.py
