[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio2text-cenf"
version = "0.9.2"
description = "Aplicación de transcripción de audio en tiempo real usando IA"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "CENF", email = "soporte@cenfarg.com.ar"}
]
maintainers = [
    {name = "CENF", email = "soporte@cenfarg.com.ar"}
]
keywords = ["transcription", "audio", "speech-to-text", "whisper", "groq", "ai", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "customtkinter>=5.2.0",
    "groq>=0.4.0",
    "sounddevice>=0.4.6",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
    "pystray>=0.19.4",
    "requests>=2.31.0",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CENFARG/Audio2Text"
Documentation = "https://github.com/CENFARG/Audio2Text/blob/main/docs/"
Repository = "https://github.com/CENFARG/Audio2Text"
"Bug Tracker" = "https://github.com/CENFARG/Audio2Text/issues"
Changelog = "https://github.com/CENFARG/Audio2Text/blob/main/CHANGELOG.md"

[project.scripts]
audio2text = "main:main"

[tool.setuptools]
packages = ["backend", "ui"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html", "*.ico", "*.png"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | _build_artifacts
  | _old_versions_archive
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backend --cov=ui --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
